<resources>
    <string name="app_name">SuroyBukidnon</string>

    <string name="search">Search...</string>

    <string name="address">address</string>
    <string name="title">Title</string>
    <string name="item_direction_icon">item_direction_icon</string>

    <string name="home">Home</string>
    <string name="event">Events</string>
    <string name="municipality">Municipality</string>
    <string name="map">Maps.me</string>

    <string name="mode">default</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="menu_logout">Log out</string>
    <string name="menu_search">Search</string>
    <string name="monthDetail">JAN</string>
    <string name="dayDetail">28</string>
    <string name="fragment_event_details_title">Title</string>
    <string name="fragment_event_details_location">Location</string>
    <string name="fragment_event_details_time">Time</string>
    <string name="fragment_event_details_description">Description</string>
    <string name="fragment_event_details_interested">Interested</string>
    <string name="fragment_event_details_going">Going</string>
    <string name="fragment_event_details_count_interested">I</string>
    <string name="fragment_event_details_count_divider">•</string>
    <string name="fragment_event_details_count_going">G</string>
    <string name="event_item_title">Event title</string>
    <string name="event_item_address">Address</string>
    <string name="event_item_date">Date</string>
    <string name="heart_count">(1)</string>
    <string name="bookmark">bookmark</string>
    <string name="account">Account</string>
    <string name="title_activity_search">ActivitySearch</string>
    <string name="places">Places</string>
    <string name="events">Events</string>
    <string name="no_item_found">No item found.</string>
    <string name="ok">OK</string>
    <string name="detail">Detail</string>
    <string name="going">Going</string>
    <string name="interested">Interested</string>
    <string name="i">I</string>
    <string name="g">G</string>
    <string name="divider">•</string>
    <string name="_6">6</string>
    <string name="dec">DEC</string>
    <string name="time">Time</string>
    <string name="description">Description</string>

</resources>
