<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Filter by:"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb_events"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events" />

        <RadioButton
            android:id="@+id/rb_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places" />

    </RadioGroup>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:background="@color/transparent"
        android:text="@string/ok" />

</LinearLayout>